--- a/FLASHReadWrite.ioc
+++ b/FLASHReadWrite.ioc
@@ -2,6 +2,20 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CAN1.BS1=CAN_BS1_11TQ
+CAN1.BS2=CAN_BS2_4TQ
+CAN1.CalculateBaudRate=500000
+CAN1.CalculateTimeBit=2000
+CAN1.CalculateTimeQuantum=125.0
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN1.Prescaler=10
+CAN2.BS1=CAN_BS1_11TQ
+CAN2.BS2=CAN_BS2_4TQ
+CAN2.CalculateBaudRate=500000
+CAN2.CalculateTimeBit=2000
+CAN2.CalculateTimeQuantum=125.0
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN2.Prescaler=10
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C4.I2C_Fall_Time=0
@@ -11,29 +25,37 @@ I2C4.Timing=0x10909CEC
 KeepUserPlacement=false
 Mcu.CPN=STM32L496ZGT6
 Mcu.Family=STM32L4
-Mcu.IP0=I2C4
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP0=CAN1
+Mcu.IP1=CAN2
+Mcu.IP2=I2C4
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32L496Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE13
 Mcu.Pin1=PE14
+Mcu.Pin10=PB8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PE15
 Mcu.Pin3=PD11
 Mcu.Pin4=PD12
 Mcu.Pin5=PD13
 Mcu.Pin6=PA13 (JTMS/SWDIO)
 Mcu.Pin7=PA14 (JTCK/SWCLK)
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin8=PB5
+Mcu.Pin9=PB6
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496ZGTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -48,6 +70,18 @@ PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
+PB5.Locked=true
+PB5.Mode=CAN_Activate
+PB5.Signal=CAN2_RX
+PB6.Locked=true
+PB6.Mode=CAN_Activate
+PB6.Signal=CAN2_TX
+PB8.Locked=true
+PB8.Mode=CAN_Activate
+PB8.Signal=CAN1_RX
+PB9.Locked=true
+PB9.Mode=CAN_Activate
+PB9.Signal=CAN1_TX
 PD11.GPIOParameters=GPIO_Label
 PD11.GPIO_Label=EEPROM_WP
 PD11.Locked=true
